[processes] Add callbacks conformance link
